--- a/style.css
+++ b/style.css
@@ -1,5 +1,36 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: auto;
+}
+h1 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin : auto;
+}
+nav {
+  text-align: center;
+}
+.anchor {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #cc9740;
+}
+figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+#featured-property p {
+  text-align: center;
+  width : 800px;
+  margin : auto;
+}
+#details div {
+  float : left;
+  width : 25%;
+  text-align: center;
+  background-color: #cc9740;
 }
